:pencil: (cz-conventional-changelog) update README.md
Update README.md. Add cz-conventional-changelog.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/sydrawat/dotfiles#readme",
   "devDependencies": {
     "commitizen": "^4.1.2",
+    "cz-conventional-changelog": "^3.2.0",
     "cz-emoji": "^1.2.1"
   }
 }
