:sparkles: (linting) support mdx linting.

--- a/configs/vscode/settings.json
+++ b/configs/vscode/settings.json
@@ -1,7 +1,5 @@
 {
-  "gitlens.codeLens.scopes": [
-    "document"
-  ],
+  "gitlens.codeLens.scopes": ["document"],
   // "gitlens.historyExplorer.enabled": true,
   "gitlens.keymap": "alternate",
   "gitlens.advanced.messages": {
@@ -22,34 +20,32 @@
     "javascript": "jsx"
   },
   // * --- seperator here ---
-  // "spotify.useCombinedApproachOnMacOS": false,
   "extensions.ignoreRecommendations": false,
   "javascript.referencesCodeLens.enabled": true,
-  "eslint.packageManager": "npm",
+  "eslint.packageManager": "yarn",
   "sync.gist": "c7e7286d385578845c41a46aaf6ab6d9",
   // * --- seperator here ---
   "files.autoSave": "onWindowChange",
   "files.trimTrailingWhitespace": true,
   "editor.wordWrap": "on",
   "editor.wrappingIndent": "indent",
-  "editor.formatOnSave": true,
   //turn off formatOnSave for JS and JSX, we will do this via eslint
   "[javascript]": {
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "[javascriptreact]": {
-    "editor.formatOnSave": false
-  },
+  // "[javascriptreact]": {
+  //   "editor.formatOnSave": false
+  // },
   // tell the ESLint plugin to run on save
   "editor.codeActionsOnSave": {
     "source.fixAll": true
   },
   // Optional BUT IMPORTANT: If you have the prettier extension enabled for other languages like CSS and HTML, turn it off for JS since we are doing it through Eslint already
-  "prettier.disableLanguages": [
-    "javascript",
-    "javascriptreact"
-  ],
+  // "prettier.disableLanguages": [
+  //   "javascript",
+  //   "javascriptreact"
+  // ],
   "editor.fontFamily": "Dank Mono, Operator Mono Lig, Dank Mono, Operator Mono, Menlo, Monaco, 'Courier New', monospace",
   "editor.fontSize": 13.5,
   "editor.lineHeight": 25,
@@ -112,25 +108,22 @@
   "[html]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "gitlens.blame.highlight.locations": [
-    "gutter",
-    "line",
-    "overview"
-  ],
+  "gitlens.blame.highlight.locations": ["gutter", "line", "overview"],
   "gitlens.blame.separateLines": false,
   "markdown.preview.fontFamily": "Dank Mono, -apple-system, BlinkMacSystemFont, 'Segoe WPC', 'Segoe UI', 'Ubuntu', 'Droid Sans', sans-serif",
   "explorer.compactFolders": false,
   // For which languages indent-rainbow should be activated (if empty it means all).
-  "indentRainbow.includedLanguages": [
-    "nim",
-    "javascript",
-    "nims",
-    "python"
-  ],
+  "indentRainbow.includedLanguages": ["nim", "javascript", "nims", "python"],
   "editor.renderWhitespace": "boundary",
   "material-icon-theme.folders.color": "#a8d6d6",
   "material-icon-theme.folders.theme": "specific",
   "material-icon-theme.saturation": 0.8,
   "python.jediEnabled": false,
   "oneDarkPro.bold": true,
+  "editor.tabSize": 2,
+  "eslint.alwaysShowStatus": true,
+  "eslint.options": {
+    "extensions":[".js",".jsx",".ts",".tsx",".md",".mdx"]
+  },
+  "eslint.validate":["markdown","md","mdx"]
 }
