:bug: (npx) eslint-airbnb peerdeps fix.
The yarn install for eslint-react led to wrong dependencies being
configured with eslint and eslint-plugin-airbnb. Fixed with npx,
as it checks the package manager you are using in the working directory.
Check
[here](https://github.com/airbnb/javascript/tree/master/packages/eslint-config-airbnb#eslint-config-airbnb-1) for more details.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dotfiles",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "dotfiles for MacOS",
   "main": "osx.sh",
   "scripts": {
@@ -16,7 +16,8 @@
   "keywords": [
     "dotfiles",
     "macos",
-    "sydrawat"
+    "sydrawat",
+    ".files"
   ],
   "author": "Siddharth Rawat",
   "license": "GPL-3.0",
