--- a/configs/vscode/settings.json
+++ b/configs/vscode/settings.json
@@ -125,5 +125,14 @@
   "eslint.options": {
     "extensions":[".js",".jsx",".ts",".tsx",".md",".mdx"]
   },
-  "eslint.validate":["markdown","md","mdx"]
+  "eslint.validate": [
+    "markdown",
+    "md",
+    "mdx"
+  ],
+  "material-icon-theme.activeIconPack": "react_redux",
+  "material-icon-theme.files.associations": {
+    "*.markdownlintignore": ".markdownlintignore",
+    ".markdownlintignore": "json"
+  }
 }
