--- a/configs/tmux/.tmux.conf
+++ b/configs/tmux/.tmux.conf
@@ -4,9 +4,17 @@ bind r source-file ~/.tmux.conf
 # Enable scrolling and pane-resizing w/ mouse
 set -g mouse on
 
+# act like vim
+setw -g mode-keys vi
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dracula/tmux'
 
 # Plugin config
@@ -17,7 +25,7 @@ set -g @dracula-git-show-remote-status true
 set -g @dracula-git-show-remote-status true
 set -g @dracula-git-show-diff-symbol !
 set -g @dracula-git-no-untracked-files true
-set -g @dracula-fixed-location 'Cambridge'
+set -g @dracula-fixed-location 'Cambridge,Massachusetts'
 set -g @dracula-plugins 'battery weather time'
 set -g @dracula-military-time true
 set -g @dracula-battery-colors 'light_purple gray'
