add k8s context to tmux-line

--- a/configs/tmux/.tmux.conf
+++ b/configs/tmux/.tmux.conf
@@ -26,7 +26,7 @@ set -g @dracula-git-show-remote-status true
 set -g @dracula-git-show-diff-symbol !
 set -g @dracula-git-no-untracked-files true
 set -g @dracula-fixed-location 'Cambridge,Massachusetts'
-set -g @dracula-plugins 'battery weather time'
+set -g @dracula-plugins 'battery kubernetes-context weather time'
 set -g @dracula-military-time true
 set -g @dracula-battery-colors 'light_purple gray'
 set -g @dracula-weather-colors 'orange dark_gray'
