add more styles to dracula/tmux + nvchad configs

--- a/configs/tmux/.tmux.conf
+++ b/configs/tmux/.tmux.conf
@@ -1,21 +1,33 @@
+set -g default-terminal "screen-256color"
+
 unbind r
 bind r source-file ~/.tmux.conf
 
 # Enable scrolling and pane-resizing w/ mouse
 set -g mouse on
 
-# act like vim
-setw -g mode-keys vi
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+# vim key bindings
+#setw -g mode-keys vi
+#bind-key h select-pane -L
+#bind-key j select-pane -D
+#bind-key k select-pane -U
+#bind-key l select-pane -R
+
+# resize panes
+bind -r h resize-pane -L 5
+bind -r j resize-pane -D 5
+bind -r k resize-pane -U 5
+bind -r l resize-pane -U 5
+
+# copy-mode
+unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode after dragging with mouse
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dracula/tmux'
+#set -g @plugin 'odedlaz/tmux-onedark-theme'
 
 # Plugin config
 set -g @dracula-show-powerline true
@@ -26,12 +38,14 @@ set -g @dracula-git-show-remote-status true
 set -g @dracula-git-show-diff-symbol !
 set -g @dracula-git-no-untracked-files true
 set -g @dracula-fixed-location 'Cambridge,Massachusetts'
-set -g @dracula-plugins 'battery kubernetes-context weather time'
+set -g @dracula-plugins 'battery kubernetes-context terraform network weather time'
 set -g @dracula-military-time true
-set -g @dracula-battery-colors 'light_purple gray'
-set -g @dracula-weather-colors 'orange dark_gray'
+set -g @dracula-network-colors 'ansicyan gray'
+set -g @dracula-battery-colors 'ansilightyellow gray'
+set -g @dracula-weather-colors 'light_orange dark_gray'
 set -g @dracula-show-flags true
 set -g @dracula-show-empty-plugins false
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of .tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
