add custom colors and icons to dracula/tmux

--- a/configs/tmux/.tmux.conf
+++ b/configs/tmux/.tmux.conf
@@ -38,14 +38,16 @@ set -g @dracula-git-show-remote-status true
 set -g @dracula-git-show-diff-symbol !
 set -g @dracula-git-no-untracked-files true
 set -g @dracula-fixed-location 'Cambridge,Massachusetts'
-set -g @dracula-plugins 'battery kubernetes-context terraform network weather time'
+set -g @dracula-plugins 'battery kubernetes-context terraform weather network time'
+#set -g @dracula-kubernetes-context-label '󰠳 '
 set -g @dracula-military-time true
-set -g @dracula-network-colors 'ansicyan gray'
+#set -g @dracula-kubernetes-context-colors 'ansicyan dark_gray'
+set -g @dracula-network-colors 'deep_blue light_gray'
 set -g @dracula-battery-colors 'ansilightyellow gray'
 set -g @dracula-weather-colors 'light_orange dark_gray'
+set -g @dracula-terraform-colors 'purple dark_gray'
 set -g @dracula-show-flags true
 set -g @dracula-show-empty-plugins false
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of .tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
