feat: update tmux conf, add ci/cd pipeline for semantic release

--- a/configs/tmux/.tmux.conf
+++ b/configs/tmux/.tmux.conf
@@ -25,6 +25,7 @@ unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode after dragging w
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dracula/tmux'
 #set -g @plugin 'odedlaz/tmux-onedark-theme'
@@ -33,21 +34,17 @@ set -g @plugin 'dracula/tmux'
 set -g @dracula-show-powerline true
 set -g @dracula-show-left-icon session
 set -g @dracula-show-fahrenheit false
-set -g @dracula-git-show-remote-status true
-set -g @dracula-git-show-remote-status true
-set -g @dracula-git-show-diff-symbol !
-set -g @dracula-git-no-untracked-files true
 set -g @dracula-fixed-location 'Cambridge,Massachusetts'
 set -g @dracula-plugins 'battery kubernetes-context terraform weather network time'
-#set -g @dracula-kubernetes-context-label '󰠳 '
-# set -g @dracula-military-time true
-set -g @dracula-time-format "%a %R"
-set -g @dracula-show-timezone true
+set -g @dracula-kubernetes-hide-user true
+set -g @dracula-military-time true
+set -g @dracula-time-format " %R"
 set -g @dracula-kubernetes-context-colors 'deep_blue light_gray'
-set -g @dracula-network-colors 'ansicyan dark_gray'
+set -g @dracula-network-colors 'light_purple dark_gray'
 set -g @dracula-battery-colors 'green gray'
 set -g @dracula-weather-colors 'light_orange dark_gray'
 set -g @dracula-terraform-colors 'purple dark_gray'
+set -g @dracula-time-colors 'ansicyan dark_gray'
 set -g @dracula-show-flags true
 set -g @dracula-show-empty-plugins false
 
