--- a/.releaserc
+++ b/.releaserc
@@ -20,7 +20,7 @@
           "package.json",
           "CHANGELOG.md"
         ],
-        "message": "chore(release): ${nextRelese.version} [skip ci]\n\n${nextRelese.notes}"
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ],
     "@semantic-release/github"
