--- a/configs/tmux/.tmux.conf
+++ b/configs/tmux/.tmux.conf
@@ -36,7 +36,9 @@ set -g @dracula-show-left-icon session
 set -g @dracula-show-fahrenheit false
 set -g @dracula-fixed-location 'Cambridge,Massachusetts'
 set -g @dracula-plugins 'battery kubernetes-context terraform weather network time'
+set -g @dracula-kubernetes-eks-hide-arn true
 set -g @dracula-kubernetes-hide-user true
+set -g @dracula-kubernetes-context-label " "
 set -g @dracula-military-time true
 set -g @dracula-time-format " %R"
 set -g @dracula-kubernetes-context-colors 'deep_blue light_gray'
